styles/mdhl.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
}

header {
    display: flex;
    padding: 1rem;
    width: 100%;
    height: 35vh;
    background-image: url("../assets/design1_image1.jpg");
    background-position-y: 83%;
    flex-direction: row;
}

header img {
    width: 12vw;
    height: 25vh;
}

.logo {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.logo h1 {
    align-self: flex-end;
}

nav {
    display: flex;
    flex: 1;
    justify-content: flex-end;
    align-items: flex-end;
}

nav a {
    text-decoration: none;
    flex-basis: 8vw;
    text-align: center;
    font-weight: bold;
}

nav a:hover{
    -webkit-transform: scale(1.5);
    -ms-transform: scale(1.5);
    transform: scale(1.5);
}

main {
    display: flex;
    width: 100%;
    min-height: 100vh;
    flex-direction: column;
    background-color: rgb(247,231,46);
}

h2 {
    display: flex;
    background: black;
    color: white;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.program {
    display: flex;
    padding-top: 2vw;
    width: 100%;
    height: 40vh;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.us {
    display: flex;
    padding: 2rem;
    width: 100%;
    flex-direction: column;
}

.articles {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.articles article {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.articles article h3 {
    display: flex;
    justify-content: center;
    align-items: center;
}

.articles article p {
    display: flex;
    padding: 0.5rem;
    width: 60vw;
}

.us img {
    display: flex;
    width: 30vw;
    height: 50vh;
    align-self: center;
}

.schedule {
    display: flex;
    flex-direction: column;
    align-self: center;
}

.top {
    display: flex;
    flex-direction: column;
    padding-top: 1rem;
    padding-bottom: 2rem;
}

table, tr, th, td{
    align-content: center;
}
th {
    background-color: black;
    color: white;
}
tbody {
    text-align: center;
    background-color: white;
}

.mid {
    display: flex;
    flex-direction: column;
    padding-top: 1.5rem;
    padding-bottom: 1rem;
}

.contact {
    display: flex;
    flex-direction: column;
}

.contact_data {
    display: flex;
    width: 47vw;
    flex-direction: row;
    justify-content: space-between;
}

span {
    font-weight: bold;
}

.rules {
    display: flex;
    padding-top: 2rem;
    padding-left: 8rem;
    padding-right: 8rem;
    width: 100%;
    flex-direction: column;
}

.title {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.sportmanship {
    padding: 1rem;
}

.regulations {
    padding: 1rem;
}

.regulations ol {
    padding-left: 2rem;
}

.letras {
    list-style-type: lower-alpha;
}

.all_play {
    padding: 1rem;
}

.all_play ul {
    padding-left: 2rem;
}

.contact {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.data {
    display: flex;
    padding: 1.5rem;
    flex-direction: column;
    align-items: center;
}

.contact img {
    width: 30vw;
    height: 50vh;
}

form {
    display: flex;
    margin: 2rem;
    padding-left: 10rem;
    padding-right: 10rem;
    flex-direction: column;
}

form h3 {
    align-self: center;
    padding-bottom: 1rem;
}

.block_1 {
    display: flex;
    margin-bottom: 1rem;
    padding-left: 8rem;
    padding-right: 8rem;
    flex-direction: column;
}

.block_1_1 {
    padding-bottom: 0.5rem;
}

.block_1_2 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.block_1_3 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.block_2 {
    margin-bottom: 1rem;
    padding-left: 8rem;
    padding-right: 8rem;
}

.block_3 {
    margin-bottom: 1rem;
    padding-left: 8rem;
    padding-right: 8rem;
}

.block_3_1 {
    display: flex;
    flex-direction: row;
}

.block_3_1_1 {
    display: flex;
    flex-direction: column;
}

.block_3_1_2 {
    display: flex;
    flex-direction: column;
}

.block_4 {
    margin-bottom: 1rem;
    padding-left: 8rem;
    padding-right: 8rem;
}

.block_5 {
    display: flex;
    flex-direction: column;
    margin-bottom: 1rem;
    padding-left: 8rem;
    padding-right: 8rem;
}

.block5_1 {
    padding-top: 0.5rem;
}

.block5_2 {
    padding-top: 0.5rem;
}

fieldset{
    margin: 0;
    border: 0;
    padding: 0;
}

#buttom {
    align-self: center;
    width: 16rem;
    height: 2rem;
    font-weight: bold;
}

@media screen and (max-width: 600px) {
    body {
        min-height: 100vh;
        display: flex;
        flex-direction: column;
        font-family: Arial, Helvetica, sans-serif;
    }
    
    header {
        display: flex;
        padding: 0.25rem;
        width: 100vw;
        height: 25vh;
        background-image: url("../assets/design1_image1.jpg");
        background-position-y: 83%;
        align-items: center;
    }
    
    header img {
        width: 35vw;
        height: 20vh;
    }
    
    .logo {
        width: 100%;
        display: flex;
        align-items: center;
    }
    .logo h1 {
        width: 10rem;
        font-size: 18px;
        text-align: center;
    }
    
    nav{
        background-color: black;
        height: 100vh;
        width: 40vw;
        padding: 1.5rem;
        position: fixed;
        top: 0;
        right: 0;
        display: flex;
        flex-direction: column;
        align-items: center;
        transform: translateX(100%);
        transition: transform .6s ease-in;
    }
    
    nav > * + * {
        margin-top: 2rem;
    }
    
    nav a {
        display: block;
        background-color: rgb(247,231,46);
        text-decoration: none;
        padding: 0.5rem 1rem;
        font-size: 1rem;
        width: 14ch;
        text-align: center;
    }
    
    #toggle-nav:checked + label {
        transform: translateX(-40vw);
    }
    
    #toggle-nav:checked ~ nav {
        transform: translateX(0);
    }
    
    label[for="toggle-nav"] {
        font-size: 3rem;
        background-color: rgb(247,231,46);
        height: 7vh;
        width: 3rem;
        display: flex;
        justify-content: center;
        align-items: center;
        transition: transform .6s ease-in;
    }
    
    #toggle-nav {
        display: none;
    }
    
    #toggle-close {
        display: none;
    }
    
    #toggle-nav:checked + label #toggle-open {
        display: none;
    }
    
    #toggle-nav:checked + label #toggle-close {
        display: block;
    }
    
    
    
    main {
        display: flex;
        width: 100vw;
        min-height: 75vh;
        flex-direction: column;
        background-color: rgb(247,231,46);
    }
    
    h2 {
        display: flex;
        background: black;
        color: white;
        width: 100vw;
        justify-content: center;
        align-items: center;
    }
    
    .program {
        display: flex;
        padding-top: 2vw;
        width: 100vw;
        height: 40vh;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
    }
    
    .us {
        padding: 2rem;
        width: 100vw;
        display: flex;
        flex-direction: column;
    }
    
    .articles {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    
    .articles article {
        display: flex;
        justify-content: center;
        flex-direction: column;
    }
    
    .articles article h3 {
        display: flex;
        justify-content: center;
        align-items: center;
    }
    
    .articles article p {
        display: flex;
        padding: 0.5rem;
        width: 60vw;
    }
    
    .us img {
        
        width: 50vw;
        height: 30vh;
        align-self: center;
    }
    
    
    .schedule {
        width: 100vw;
        display: flex;
        flex-direction: column;
        align-self: center;
    }
    
    .top {
        display: flex;
        flex-direction: column;
        padding-top: 1rem;
        padding-bottom: 2rem;
    }
    
    table, tr, th, td{
        align-content: center;
    }
    
    th {
        background-color: black;
        color: white;
    }
    
    tbody {
        text-align: center;
        background-color: white;
    }
    
    .mid {
        display: flex;
        flex-direction: column;
        padding-top: 1.5rem;
        padding-bottom: 1rem;
    }
    
    .contact {
        display: flex;
        flex-direction: column;
    }
    
    .contact_data {
        display: flex;
        width: 47vw;
        flex-direction: row;
        justify-content: space-between;
    }
    
    span {
        font-weight: bold;
    }
    
    .rules {
        width: 100vw;
        display: flex;
        flex-direction: column;
    }
    
    .title {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    
    .title p {
        text-align: center;
    }
    
    .sportmanship {
        padding: 1rem;
    }
    .sportmanship p {
        padding-left: 2rem;
    }
    
    .regulations {
        padding: 1rem;
    }
    
    .regulations ol {
        padding-left: 2rem;
    }
    
    .letras {
        list-style-type: lower-alpha;
    }
    
    .all_play {
        padding: 1rem;
    }
    
    .all_play p {
        padding-left: 2rem;
    }
    
    .all_play ul {
        padding-top: 0.5rem;
        padding-left: 3rem;
    }
    
    form {
        display: flex;
        flex-direction: column;
    }
    
    form h3 {
        align-self: center;
        padding-bottom: 1rem;
    }
    
    .block_1 {
        padding-left: 1rem;
        padding-right: 1rem;
        display: flex;
        flex-direction: column;
    }
    
    .block_1_1 {
        display: flex;
        padding-bottom: 0.5rem;
        flex-wrap: wrap;
    }
    
    .block_1_2 {
        padding-top: 0.5rem;
        padding-bottom: 0.5rem;
        display: flex;
        flex-wrap: wrap;
    }
    
    .block_1_3 {
        padding-top: 0.5rem;
        padding-bottom: 0.5rem;
        display: flex;
        flex-wrap: wrap;
    }
    
    .block_2 {
        margin-top: 1rem;
        margin-bottom: 1rem;
        padding-left: 1rem;
        padding-right: 1rem;
    }
    
    .block_3 {
        margin-bottom: 1rem;
        padding-left: 1rem;
        padding-right: 1rem;
    }
    
    .block_3_1 {
        display: flex;
        flex-direction: row;
    }
    
    .block_3_1_1 {
        display: flex;
        flex-direction: column;
    }
    
    .block_3_1_2 {
        display: flex;
        flex-direction: column;
    }
    
    .block_4 {
        margin-bottom: 1rem;
        padding-left: 1rem;
        padding-right: 1rem;
    }
    
    .block_5 {
        display: flex;
        flex-direction: column;
        margin-bottom: 1rem;
        padding-left: 1rem;
        padding-right: 1rem;
    }
    
    .block5_1 {
        padding-top: 0.5rem;
    }
    
    .block5_2 {
        padding-top: 0.5rem;
    }
    
    fieldset{
        margin: 0;
        border: 0;
        padding: 0;
    }
    
    #buttom {
        align-self: center;
        width: 16rem;
        height: 2rem;
        font-weight: bold;
    }
    
    .contact {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    
    .data {
        display: flex;
        padding: 1.5rem;
        flex-direction: column;
        text-align: center;
    }
    
    .contact img {
        width: 50vw;
        height: 25vh;
    }
}

